--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,3 +4,6 @@ parameters:
         - src
     tmpDir: build/phpstan
     reportUnmatchedIgnoredErrors: true
+    ignoreErrors:
+        - identifier: function.alreadyNarrowedType
+        - identifier: nullsafe.neverNull
